# perekup

backend/: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  go.mod  go.sum
backend/cmd/app/: main.go
backend/cmd/loader/: main.go
backend/internal/config/: config.go
backend/internal/entity/: auth.go  products.go  subs.go  telegram.go  users.go
backend/internal/models/: products.go  users.go
backend/internal/repository/: categories.go  keywords.go  models.go  repository.go  specs.go  subscriptions.go  users.go
backend/internal/service/: categories.go  keywords.go  models.go  service.go  specs.go  subscriptions.go  users.go
backend/internal/store/: store.go
backend/internal/utils/: auth.go
backend/migrations/: 000001_init.down.sql  000001_init.up.sql
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.css  main.tsx  telegram-web-app.d.ts
telegram/: .gitignore  Dockerfile  pyproject.toml
telegram/app/: get_ids.py  main.py  runner.py
telegram/app/clients/: memcached_client.py
telegram/app/config/: __init__.py  logger.py  setup.py
telegram/app/database/: __init__.py  connect.py
telegram/app/database/enums/: spec.py
telegram/app/database/models/: __init__.py  base.py  product.py  user.py
telegram/app/handlers/: commands.py  register_handles.py  userbot.py
telegram/app/keyboards/: __init__.py
telegram/app/services/: batch_manager.py
telegram/app/storage/: cache.py
telegram/app/utils/: get_id.py
(+42 files in other folders)
